--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/waterquality
     username: postgres
-    password: test
+    password: password
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate.ddl-auto: update
@@ -13,6 +13,6 @@ spring:
       hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
 
 mqtt:
-  broker-url: tcp://broker.hivemq.com:1883
+  broker-url: tcp://mosquitto:1883
   client-id: spring-mqtt-server
   topic: sensors/#
