chore: tidy some stuff, hope nothing breaks

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,3 +25,5 @@ management:
   endpoint:
     health:
       show-details: always
+jwt:
+    secret: ${JWT_SECRET:t4rCUBeZ4T9AxviMJv86xxtJk1M6mouSEpoAaLRKzXo=}
