--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,4 +26,4 @@ management:
     health:
       show-details: always
 jwt:
-    secret: ${JWT_SECRET:t4rCUBeZ4T9AxviMJv86xxtJk1M6mouSEpoAaLRKzXo=}
+    secret: ${JWT_SECRET}
