--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,8 @@ spring:
 mqtt:
   broker-url: tcp://mosquitto:1883
   client-id: spring-mqtt-server
+  username: ${MQTT_USER}
+  password: ${MQTT_PASS}
   topic: sensors/#
 
 management:
